# Agentic-AI-PydanticAI-Cookbook

./: README.md  pyproject.toml
cookbooks/10-model-call/: main.ipynb
cookbooks/20-weather-agent/: main.ipynb
cookbooks/multi-agent-applications/: agent_as_tool.ipynb  main.ipynb
