[project]
name = "agentic-ai-pydanticai-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logfire>=3.7.0",
    "nest-asyncio>=1.6.0",
    "pydantic-ai-slim[openai]>=0.0.31",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
